[package]
name = "comemo"
version = "0.3.0"
authors = ["Laurenz <laurmaedje@gmail.com>"]
edition = "2021"
description = "Incremental computation through constrained memoization."
repository = "https://github.com/typst/comemo"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["caching"]
keywords = ["incremental", "memoization", "tracked", "constraints"]

[dependencies]
comemo-macros = { version = "0.3", path = "macros" }
dashmap = "5"
once_cell = "1"
parking_lot = "0.12"
siphasher = "0.3"
